--- a/Tank Game/Tank Game.vcxproj
+++ b/Tank Game/Tank Game.vcxproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <ClCompile Include="Bullet.cpp" />
     <ClCompile Include="Environment.cpp" />
+    <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="Tank.cpp" />
@@ -76,6 +77,7 @@
     <ClInclude Include="Bullet.h" />
     <ClInclude Include="DEBUG.h" />
     <ClInclude Include="Environment.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Tank.h" />
     <ClInclude Include="utils.h" />
     <ClInclude Include="Object.h" />
