--- a/Tank Game/Tank Game.vcxproj.filters
+++ b/Tank Game/Tank Game.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="GameScene.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EventMsgr.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Object.h">
@@ -81,6 +84,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameScene.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EventMsgr.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
