--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,18 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+
+# =========================
+# CMake
+# =========================
+CMakeCache.txt
+CMakeLists.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
+# =========================
+# Output executable
+# =========================
+tank.exe
