--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,9 @@ install_manifest.txt
 # Output executable
 # =========================
 tank.exe
+
+# =========================
+# Vim temporary files
+# =========================
+*.swp
+
