--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -41,6 +41,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LibraryPath>C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\lib\SFML;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\Users\abraker\Documents\Visual Studio 2013\Projects\Tank Game\Project2\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -76,6 +77,7 @@
     <ClInclude Include="include\components\gun.h" />
     <ClInclude Include="include\components\health.h" />
     <ClInclude Include="include\components\MouseControls.h" />
+    <ClInclude Include="include\components\projectile.h" />
     <ClInclude Include="include\components\render_properties.h" />
     <ClInclude Include="include\components\tank_controls.h" />
     <ClInclude Include="include\components\texture_handle.h" />
@@ -85,10 +87,10 @@
     <ClInclude Include="include\DEBUG.h" />
     <ClInclude Include="include\systems\expiring_system.h" />
     <ClInclude Include="include\systems\input_system.h" />
-    <ClInclude Include="include\systems\movement_system.h" />
     <ClInclude Include="include\systems\physics_system.h" />
     <ClInclude Include="include\systems\render_system.h" />
     <ClInclude Include="include\systems\texture_manager.h" />
+    <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\Tank Game\Tank Game\Bullet_0.png" />
@@ -102,6 +104,7 @@
     <ClCompile Include="src\components\gun.cpp" />
     <ClCompile Include="src\components\health.cpp" />
     <ClCompile Include="src\components\MouseControls.cpp" />
+    <ClCompile Include="src\components\projectile.cpp" />
     <ClCompile Include="src\components\render_properties.cpp" />
     <ClCompile Include="src\components\tank_controls.cpp" />
     <ClCompile Include="src\components\texture_handle.cpp" />
@@ -110,10 +113,10 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\systems\expiring_system.cpp" />
     <ClCompile Include="src\systems\input_system.cpp" />
-    <ClCompile Include="src\systems\movement_system.cpp" />
     <ClCompile Include="src\systems\physics_system.cpp" />
     <ClCompile Include="src\systems\render_system.cpp" />
     <ClCompile Include="src\systems\texture_manager.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
