--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -90,12 +90,14 @@
     <ClInclude Include="include\systems\physics_system.h" />
     <ClInclude Include="include\systems\render_system.h" />
     <ClInclude Include="include\systems\texture_manager.h" />
+    <ClInclude Include="include\utils.h" />
     <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\Tank Game\Tank Game\Bullet_0.png" />
     <Image Include="..\..\Tank Game\Tank Game\Tank_0.png" />
     <Image Include="..\..\Tank Game\Tank Game\Tilesheet.png" />
+    <Image Include="Button.png" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\application.cpp" />
