--- a/Project2/Project2.vcxproj.filters
+++ b/Project2/Project2.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClInclude Include="UserInterface.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\Tank Game\Tank Game\Bullet_0.png">
@@ -87,6 +90,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="..\..\Tank Game\Tank Game\Tilesheet.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Button.png">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
