moved userinterface file

--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -20,6 +20,7 @@ foreach(component
 	transform
 	velocity
 	projectile
+	UserInterface
 )
 	list(APPEND component_files include/components/${component}.h src/components/${component}.cpp)
 endforeach(component)
