--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -71,6 +71,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Components.h" />
+    <ClInclude Include="include\systems\UI_System.h" />
+    <ClInclude Include="Systems.h" />
     <ClInclude Include="include\application.h" />
     <ClInclude Include="include\components\bounding_circle.h" />
     <ClInclude Include="include\components\expires.h" />
@@ -82,6 +84,7 @@
     <ClInclude Include="include\components\tank_controls.h" />
     <ClInclude Include="include\components\texture_handle.h" />
     <ClInclude Include="include\components\transform.h" />
+    <ClInclude Include="include\components\UserInterface.h" />
     <ClInclude Include="include\components\velocity.h" />
     <ClInclude Include="include\core\environment.h" />
     <ClInclude Include="include\DEBUG.h" />
@@ -91,7 +94,6 @@
     <ClInclude Include="include\systems\render_system.h" />
     <ClInclude Include="include\systems\texture_manager.h" />
     <ClInclude Include="include\utils.h" />
-    <ClInclude Include="UserInterface.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="..\..\Tank Game\Tank Game\Bullet_0.png" />
@@ -111,6 +113,7 @@
     <ClCompile Include="src\components\tank_controls.cpp" />
     <ClCompile Include="src\components\texture_handle.cpp" />
     <ClCompile Include="src\components\transform.cpp" />
+    <ClCompile Include="src\components\UserInterface.cpp" />
     <ClCompile Include="src\components\velocity.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\systems\expiring_system.cpp" />
@@ -118,7 +121,7 @@
     <ClCompile Include="src\systems\physics_system.cpp" />
     <ClCompile Include="src\systems\render_system.cpp" />
     <ClCompile Include="src\systems\texture_manager.cpp" />
-    <ClCompile Include="UserInterface.cpp" />
+    <ClCompile Include="src\systems\UI_System.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
