vector class, added template support + some other optimizations

--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -56,6 +56,7 @@ endforeach(system)
 add_executable(tank 
 	include/core/environment.h
 	include/events.h
+	include/math/vector.h
 	${component_files}
 	${system_files}
 	${manager_files}
