view updates when a focused entity is destroyed

--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -29,6 +29,7 @@ foreach(component
 	ViewController
 	Label
 	solid
+	bounding_box
 )
 	list(APPEND component_files include/components/${component}.h src/components/${component}.cpp)
 endforeach(component)
