Added the blur vertex shader to the project

--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="res\blur.frag" />
+    <None Include="res\blur.vert" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="res\Bullet_0.png" />
