[CODE CHANGES] + Added a Component macro for easy component construction using StdComponent * Added token2string(x) macro in utils.h to (kinda not) resolve the component naming issue + StdComponent automatically deletes data and clears the del flag if assigned another pointer + Made an InputControls Manager - Removed MouseControls and KeyboardControl Components + Added a UI Manager to aid in creating the menu and moved anything relating to UI construction into the manager.
[FILES CHANGES]
+ managers/InputControls_Mgr.h
+ managers/InputControls_Mgr.cpp
+ managers/UI_Manager.h
+ managers/UI_Manager.cpp
- components/MouseControls.h
- components/MouseControls.cpp
- components/KeyControls.h
- components/KeyControls.cpp

[ISSUE/WIKI CHANGES]
+ Added "Fix broken code for the SFML 2.2 update" issue
+ Updated "Guidelines for working with code" with the new commit changelog format

--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -73,12 +73,10 @@
     <ClInclude Include="include\Components.h" />
     <ClInclude Include="include\components\bounding_box.h" />
     <ClInclude Include="include\components\GUIObj.h" />
-    <ClInclude Include="include\components\KeyControls.h" />
     <ClInclude Include="include\components\Label.h" />
     <ClInclude Include="include\components\map_desc.h" />
     <ClInclude Include="include\components\solid.h" />
     <ClInclude Include="include\components\sprite.h" />
-    <ClInclude Include="include\components\StdComponent.h" />
     <ClInclude Include="include\components\texture.h" />
     <ClInclude Include="include\components\tilemap.h" />
     <ClInclude Include="include\components\VertexArray.h" />
@@ -86,19 +84,19 @@
     <ClInclude Include="include\events.h" />
     <ClInclude Include="include\Managers.h" />
     <ClInclude Include="include\managers\entity_manager.h" />
+    <ClInclude Include="include\managers\InputControls_Mgr.h" />
     <ClInclude Include="include\managers\map_loader.h" />
     <ClInclude Include="include\managers\texture_manager.h" />
+    <ClInclude Include="include\managers\UI_Manager.h" />
     <ClInclude Include="include\math\vector.h" />
     <ClInclude Include="include\Systems.h" />
     <ClInclude Include="include\systems\damage_system.h" />
     <ClInclude Include="include\systems\UI_System.h" />
     <ClInclude Include="include\systems\view_system.h" />
     <ClInclude Include="include\application.h" />
-    <ClInclude Include="include\components\bounding_circle.h" />
     <ClInclude Include="include\components\expires.h" />
     <ClInclude Include="include\components\gun.h" />
     <ClInclude Include="include\components\health.h" />
-    <ClInclude Include="include\components\MouseControls.h" />
     <ClInclude Include="include\components\projectile.h" />
     <ClInclude Include="include\components\render_properties.h" />
     <ClInclude Include="include\components\tank_controls.h" />
@@ -121,9 +119,7 @@
     <ClCompile Include="src\components\GUIObj.cpp" />
     <ClCompile Include="src\components\gun.cpp" />
     <ClCompile Include="src\components\health.cpp" />
-    <ClCompile Include="src\components\KeyControls.cpp" />
     <ClCompile Include="src\components\Label.cpp" />
-    <ClCompile Include="src\components\MouseControls.cpp" />
     <ClCompile Include="src\components\projectile.cpp" />
     <ClCompile Include="src\components\solid.cpp" />
     <ClCompile Include="src\components\sprite.cpp" />
@@ -137,8 +133,10 @@
     <ClCompile Include="src\components\ViewController.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\managers\entity_manager.cpp" />
+    <ClCompile Include="src\managers\InputControls_Mgr.cpp" />
     <ClCompile Include="src\managers\map_loader.cpp" />
     <ClCompile Include="src\managers\texture_manager.cpp" />
+    <ClCompile Include="src\managers\UI_Manager.cpp" />
     <ClCompile Include="src\systems\damage_system.cpp" />
     <ClCompile Include="src\systems\expiring_system.cpp" />
     <ClCompile Include="src\systems\input_system.cpp" />
