--- a/Project2/Project2.vcxproj
+++ b/Project2/Project2.vcxproj
@@ -90,6 +90,7 @@
     <ClInclude Include="include\managers\UI_Manager.h" />
     <ClInclude Include="include\math\vector.h" />
     <ClInclude Include="include\Systems.h" />
+    <ClInclude Include="include\systems\CPU_System.h" />
     <ClInclude Include="include\systems\damage_system.h" />
     <ClInclude Include="include\systems\UI_System.h" />
     <ClInclude Include="include\systems\view_system.h" />
@@ -137,6 +138,7 @@
     <ClCompile Include="src\managers\map_loader.cpp" />
     <ClCompile Include="src\managers\texture_manager.cpp" />
     <ClCompile Include="src\managers\UI_Manager.cpp" />
+    <ClCompile Include="src\systems\CPU_System.cpp" />
     <ClCompile Include="src\systems\damage_system.cpp" />
     <ClCompile Include="src\systems\expiring_system.cpp" />
     <ClCompile Include="src\systems\input_system.cpp" />
