--- a/Project2/CMakeLists.txt
+++ b/Project2/CMakeLists.txt
@@ -39,6 +39,7 @@ foreach(manager
 	map_loader
 	InputControls_Mgr
 	UI_Manager
+	CPU_Manager
 )
 	list(APPEND manager_files include/managers/${manager}.h src/managers/${manager}.cpp)
 endforeach(manager)
